--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -46,3 +46,16 @@
     font-size: 20px;
   }
   
+
+  .sidebar-logo{
+    height: 130px;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+.contact-detail{
+  color: aliceblue;
+  text-align: center;
+  font-size:medium;
+}
